Fix content wrapping

--- a/web/app/style/main.less
+++ b/web/app/style/main.less
@@ -21,6 +21,10 @@ body {
   box-sizing: border-box;
 }
 
+#content {
+  min-width: 1200px;
+}
+
 #topbar {
   height: 121px;
   margin: 0 auto;
@@ -38,6 +42,7 @@ body {
 .sidebar {
   display: table-cell;
   width: @oppija-haku-width;
+  min-width: 380px;
   padding-left:@page-border-width;
   padding-top: 35px;
   vertical-align: top;
